--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -8,6 +8,11 @@
 
 .experience-card-logo-div {
   margin: 10px;
+  display: flex;
+  margin: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: #084C61;
 }
 
 .experience-card-body-div {
@@ -20,7 +25,7 @@
 }
 
 .experience-card-logo {
-  width: 70px;
+  width: 100px;
 }
 
 .experience-card-title {
